[package]
authors = ["Solend Maintainers <maintainers@solend.fi>"]
description = "Solend Program"
edition = "2018"
license = "Apache-2.0"
name = "solend-program"
repository = "https://github.com/solendprotocol/solana-program-library"
version = "0.1.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
switchboard-program = "0.2.0"
switchboard-v2 = "0.1.3"
thiserror = "1.0"
uint = "=0.9.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
serde = "1.0"
serde_yaml = "0.8"
solana-program-test = "=1.9"
solana-sdk = "=1.9"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
